// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should render correctly when includes the reset option 1`] = `
<div
  className="components-form-sub-form-buttons-m__container"
>
  <Button
    aria-label="Reset the sub form"
    disabled={true}
    onClick={[Function]}
    type="button"
  >
    Reset
  </Button>
  <Button
    aria-label="Submit the sub form"
    disabled={true}
    onClick={[Function]}
    submitting={false}
    type="button"
  >
    Add
  </Button>
</div>
`;

exports[`should render correctly when includes the reset option and not pristine 1`] = `
<div
  className="components-form-sub-form-buttons-m__container"
>
  <Button
    aria-label="Reset the sub form"
    disabled={false}
    onClick={[Function]}
    type="button"
  >
    Reset
  </Button>
  <Button
    aria-label="Submit the sub form"
    disabled={false}
    onClick={[Function]}
    submitting={false}
    type="button"
  >
    Add
  </Button>
</div>
`;

exports[`should render correctly when not submitting 1`] = `
<div
  className="components-form-sub-form-buttons-m__container"
>
  <Button
    aria-label="Submit the sub form"
    disabled={true}
    onClick={[Function]}
    submitting={false}
    type="button"
  >
    Add
  </Button>
</div>
`;

exports[`should render correctly when submitting 1`] = `
<div
  className="components-form-sub-form-buttons-m__container"
>
  <Button
    aria-label="Submit the sub form"
    disabled={false}
    onClick={[Function]}
    submitting={true}
    type="button"
  >
    Add
  </Button>
</div>
`;
